// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LevelEditor /> Matches the current snapshot 1`] = `
<styled.div
  id="editor-grid"
>
  <styled.div>
    <styled.div
      className="tile"
      darkened={false}
      key="0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <Connect(Component)
        tileId="1"
      />
    </styled.div>
    <styled.div
      className="tile"
      darkened={false}
      key="1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <Connect(Component)
        tileId="1"
      />
    </styled.div>
    <styled.div
      className="tile"
      darkened={false}
      key="2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <Connect(Component)
        tileId="2"
      />
    </styled.div>
    <Connect(Component) />
  </styled.div>
</styled.div>
`;

exports[`<LevelEditor /> Matches the current snapshot with darkened tiles 1`] = `
<styled.div
  id="editor-grid"
>
  <styled.div>
    <styled.div
      className="tile"
      darkened={false}
      key="0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <Connect(Component)
        tileId="1"
      />
    </styled.div>
    <styled.div
      className="tile"
      darkened={false}
      key="1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <Connect(Component)
        tileId="1"
      />
    </styled.div>
    <styled.div
      className="tile"
      darkened={false}
      key="2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <Connect(Component)
        tileId="2"
      />
    </styled.div>
    <styled.div
      className="tile"
      darkened={true}
      key="3"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <Connect(Component)
        tileId="4"
      />
    </styled.div>
    <Connect(Component) />
  </styled.div>
</styled.div>
`;
